# special-functions

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  aliases.js  crates.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
.cargo/: katex.html
.ci/: mathjax.html  rust-doc.sh
benches/: approximations.rs  bessel.rs  main.rs  other.rs
c_vec/: CSlice.t.html  CVec.t.html  all.html  index.html  struct.CSlice.html  struct.CVec.html
cfg_if/: all.html  index.html  macro.cfg_if!.html  macro.cfg_if.html
ci/: after_success.sh  before_script.sh  script.sh
libc/: ABDAY_2.v.html  ABDAY_5.v.html  ABDAY_6.v.html  ABMON_11.v.html  ABMON_7.v.html  ACCOUNTING.v.html  ADFS_SUPER_MAGIC.v.html  AF_ATMSVC.v.html  AF_AX25.v.html  AF_BLUETOOTH.v.html  AF_IB.v.html  AF_IEEE802154.v.html  AF_IPX.v.html  AF_IRDA.v.html  AF_ISDN.v.html  AF_KEY.v.html  AF_LLC.v.html  AF_LOCAL.v.html  AF_MPLS.v.html  AF_NETBEUI.v.html  AF_NETROM.v.html  AF_PACKET.v.html  AF_PPPOX.v.html  AF_RDS.v.html  AF_ROSE.v.html  AF_ROUTE.v.html  AF_RXRPC.v.html  AF_SECURITY.v.html  AF_TIPC.v.html  AF_UNIX.v.html  AF_UNSPEC.v.html  AF_VSOCK.v.html  AF_X25.v.html  AF_XDP.v.html  AI_ADDRCONFIG.v.html  AI_PASSIVE.v.html  AI_V4MAPPED.v.html  ALG_SET_AEAD_ASSOCLEN.v.html  ALG_SET_KEY.v.html  ALG_SET_OP.v.html  (+5908 more)
log/: Level.t.html  LevelFilter.t.html  Log.t.html  Metadata.t.html  MetadataBuilder.t.html  ParseLevelError.t.html  Record.t.html  RecordBuilder.t.html  STATIC_MAX_LEVEL.v.html  SetLoggerError.t.html  all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  (+34 more)
(+11323 files in other folders)
