[package]
name = "special-functions"
version = "0.1.0"
authors = ["JP-Ellis <josh@jpellis.me>"]

edition = "2018"

[dependencies]
log = "0.4"

[dev-dependencies]
csv = "1.1"
rand = "0.8"
criterion = "0.3"
zstd = "0.9"

[features]
default = []
nightly = []

[[bench]]
name = "main"
harness = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]